roles/keycloak-idp/templates/oauth2-proxy-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: web
  selector:
    app: oauth2-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.3.0
        args:
        # keycloak and ADFS work when all these are set.  now going to start whittling them down
        # but github is not working (i think setting cookie-secure=flase, cookike-httponly=false
        #
        # without any of these ADFS works, but does not deliver any custom response headers for Auth or X-*, only cors
        #
        # with these two alone, you get Authorization, x-auth-request-email-my, CORS
        #- --pass-access-token=true
        #- --set-xauthrequest=true

        # adding this did not change behavior
        #- --pass-basic-auth=true
        # adding this did not change behavior
        #- --pass-user-headers=true
        # adding this did not change behavior
        #- --set-authorization-header=true
        # adding this did not change behavior
        #- --prefer-email-to-user=true
        #
        # but all this is making sense given that https://oauth2proxy.kubeadm.local/oauth2/auth
        # only returns: x-auth-request-email, x-auth-request-user with random id
        #
        # with these 2 values + prefer email for keycloak (which matches /oauth2/auth)
        # gte back: x-autho-request-email-my, x-auth-request-groups-my, x-auth-request-preferred-username-my, Auth, CORS

        #- --pass-access-token=true
        #- --set-xauthrequest=true

        # tested with kubernetes proxy, resource app sees headers even though you won't see them in browser
        - --set-xauthrequest=true
        - --pass-basic-auth=true
        - --set-authorization-header=true
