roles/keycloak-idp/templates/UNUSED-simple-oidc-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-oidc-provider
  name: simple-oidc-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-oidc-provider
  template:
    metadata:
      labels:
        app: simple-oidc-provider
    spec:
      containers:
      - name: simple-oidc-provider
        image: qlik/simple-oidc-provider:0.2.5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-oidc-provider
  name: simple-oidc-provider
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: web
  selector:
    app: simple-oidc-provider
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: simple-oidc-provider
  name: simple-oidc-provider
spec:
  rules:
  - host: simpleoidc.kubeadm.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-oidc-provider
            port:
              number: 9000
  tls:
  - hosts:
    - simpleoidc.kubeadm.local
    secretName: tls-credential
