roles/keycloak-idp/templates/oauth-proxy-subdomain-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  labels:
    app: oauth-proxy
  name: oauth-proxy
spec:
  rules:
  - host: oauthproxy.kubeadm.local
    http:
      paths:
      - pathType: Prefix
        path: "/oauth2"
        backend:
          service:
            name: oauth-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - oauthproxy.kubeadm.local
    secretName: tls-credential
