roles/keycloak-idp/templates/oauth2-proxy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  rules:
  - host: oauth2proxy.kubeadm.local
    http:
      paths:
      - pathType: Prefix
        path: "/" #"/oauth2/"
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - oauth2proxy.kubeadm.local
    secretName: oauth2proxy-tls-secret
